added transformation matrix classes to be used for model classes